12_fix.patch